--- a/css/extension.css
+++ b/css/extension.css
@@ -82,6 +82,7 @@ extension-matter-adapter-
 /* In this example we hide the second page based on a CSS class that is added or removed from the content container div */
 #extension-matter-adapter-second-page{
     display:none;
+    padding-top:2rem;
 }
 .extension-matter-adapter-showing-second-page #extension-matter-adapter-second-page{
     display:block;
@@ -277,11 +278,12 @@ extension-matter-adapter-
 /*  DISCOVERING  */
 
 
+/*
 .extension-matter-adapter-busy-discovering #extension-matter-adapter-discover-button{
     display:none;
 }
 
-/*
+
 .extension-matter-adapter-busy-pairing .extension-matter-adapter-pairing-button{
     display:none;
 }
@@ -305,9 +307,15 @@ extension-matter-adapter-
 }
 
 .extension-matter-adapter-pairing-network #extension-matter-adapter-pairing-bluetooth-hint,
-.extension-matter-adapter-pairing-network #extension-matter-adapter-pairing-step-wifi{
+.extension-matter-adapter-pairing-network #extension-matter-adapter-pairing-step-wifi,
+.extension-matter-adapter-pairing-network #extension-matter-adapter-pairing-step-qr{
 	display:none;
 }
+
+.extension-matter-adapter-pairing-normal #extension-matter-adapter-pairing-step-network-code{
+    display:none;
+}
+
 
 
 #extension-matter-adapter-wifi-remember-checkbox{
@@ -329,11 +337,13 @@ extension-matter-adapter-
 .extension-matter-adapter-busy-pairing-hint{
     display:none;
 }
-.extension-matter-adapter-busy-pairing .extension-matter-adapter-busy-pairing-hint{
+.extension-matter-adapter-busy-pairing #extension-matter-adapter-busy-pairing-indicator{
     display:block;
 }
 
-.extension-matter-adapter-busy-pairing .extension-matter-adapter-start-pairing-button{
+
+div.extension-matter-adapter-busy-pairing #extension-matter-adapter-start-normal-pairing-button,
+div.extension-matter-adapter-busy-pairing #extension-matter-adapter-start-network-pairing-button{
     display:none;
 }
 
