--- a/views/content.html
+++ b/views/content.html
@@ -170,6 +170,16 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
 					</div>
 
 
+                    <div id="extension-matter-adapter-pairing-step-network-code" class="extension-matter-adapter-area">
+                        <h4>Please enter the pairing pin code</h4>
+                        <p>The app or controller that you used to share the new device with will also have provided a pairing pin code - likely a number. Please enter that here.</p>
+                        <input id="extension-matter-adapter-network-pairing-code-input" type="text" placeholder="1234567"/>
+						<div class="extension-matter-adapter-align-right">
+                            <button id="extension-matter-adapter-start-network-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start network pairing</button>
+							<!--<button id="extension-matter-adapter-save-network-pairing-code-button" class="text-button">Save</button>-->
+						</div>
+                    </div>
+                    
 
 					<div id="extension-matter-adapter-pairing-start-area" class="extension-matter-adapter-area">
 						<h4>Ready to pair</h4>
@@ -182,29 +192,32 @@ Addons may add buttons to the top-right and bottom-right corner. Buttons to add 
 							<p style"text-align:center">Updating certificates...</p>
 						</div>
                         
-                        <p id="extension-matter-adapter-pairing-bluetooth-hint">
+                        <div id="extension-matter-adapter-pairing-bluetooth-hint">
     						<ul>
     							<li>The device must be within Bluetooth range of the Candle Controller</li>
     							<li>It's recommended to factory reset the device</li>
     						</ul>
-                        </p>
+                        </div>
                         
 						<div class="extension-matter-adapter-align-right">
 							<button id="extension-matter-adapter-start-normal-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start normal pairing</button>
-							<button id="extension-matter-adapter-start-network-pairing-button" class="text-button extension-matter-adapter-start-pairing-button">Start network pairing</button>
 						</div>
 
+						
+					</div>
+                    
+                    <div id="extension-matter-adapter-pairing-busy-step">
 						<div id="extension-matter-adapter-busy-pairing-indicator" class="extension-matter-adapter-area extension-matter-adapter-hidden">
 							<div class="extension-matter-adapter-spinner">
 								<div></div><div></div><div></div><div></div>
 							</div>
-							<h4>Pairing...</h4>
+							<p style="text-align:center">Pairing...</p>
 						</div>
 						<div id="extension-matter-adapter-pairing-failed-hint" class="extension-matter-adapter-area extension-matter-adapter-error extension-matter-adapter-hidden">
 							<h4>Pairing failed</h4>
 							<button id="extension-matter-adapter-pairing-failed-try-again-button" class="text-button">Try again</button>
 						</div>
-					</div>
+                    </div>
 					<!--
 					<div id="extension-matter-adapter-pairing-step2" class="extension-matter-adapter-area">
 						<h4>STEP 2 - Pairing "<span id="extension-matter-adapter-pairing-step2-device-title">...</span>"</h4>
